# kaleshi

./: .gitignore  .npmrc  README.md  TODOS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/backend/: .env.example  package.json  tsconfig.build.json
apps/backend/prisma/: schema.prisma  seed.ts
apps/backend/src/: app.module.ts  main.ts
apps/backend/src/accounts/: accounts.controller.ts  accounts.module.ts  accounts.service.ts
apps/backend/src/admin/: admin.controller.ts  admin.module.ts  admin.service.ts
apps/backend/src/auth/: account.guard.ts  (+5 more)
apps/crons/close-betting-cron/: package.json
apps/crons/open-betting/: package.json
apps/crons/settle-markets/: package.json
apps/frontend/: .cta.json  README.md  eslint.config.js  index.html  package.json  tailwind.config.ts  vite.config.ts
apps/frontend/src/: App.tsx  env.ts  index.css  main.tsx
apps/matching-engine/: .env.example  .gitignore  Cargo.toml
apps/matching-engine/src/: error.rs  main.rs
apps/matching-engine/src/engine/: engine.rs  events.rs  fill.rs  mod.rs  order.rs  orderbook.rs  publish_events.rs  stream.rs
apps/matching-engine/src/infra/: bootstrap.rs  ledger.rs  ledger_replay.rs  mod.rs  redis_helper.rs  redis_publisher.rs  redis_streams.rs  redis_subscriber.rs  snapshot.rs  view_emitter.rs
apps/matching-engine/src/orderbook/: book.rs  builder.rs  enums.rs  errors.rs  journal.rs  mod.rs  order.rs  report.rs  utils.rs
apps/worker/: .env.example  package.json
apps/worker/prisma/: schema.prisma
apps/worker/src/: client.ts  index.ts  prisma.ts  timescale.ts
(+175 files in other folders)
