[package]
name = "matching-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.23", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
once_cell = "1"
chrono = "0.4"
futures = "0.3"
anyhow = "1.0.100"
dotenvy = "0.15"
rust-order-book = "0.0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2.0"
url = "2.5.8"

[dev-dependencies]
